--- a/index.html
+++ b/index.html
@@ -3,30 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Fruit Merge v83</title>
+    <title>Fruit Merge v84</title>
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
     <style>
         * { box-sizing: border-box; touch-action: none; -webkit-user-select: none; }
-        body { margin: 0; overflow: hidden; background: #000; font-family: sans-serif; }
+        body { margin: 0; overflow: hidden; background: #000; font-family: 'Segoe UI', sans-serif; }
         
-        #game-container { 
-            position: relative; width: 100vw; height: 100vh; background: #E6E6FA; 
-            border: 8px solid #333; overflow: hidden; 
-        }
-
-        #gameCanvas {
-            position: absolute; top: 0; left: 0; z-index: 1; /* Lowest layer */
-            width: 100%; height: 100%;
-        }
-
-        /* The Secret Sauce: pointer-events: none makes this layer 'invisible' to touches */
-        #ui-layer { 
-            position: absolute; inset: 0; z-index: 10; pointer-events: none; 
-        }
+        #game-container { position: relative; width: 100vw; height: 100vh; background: #E6E6FA; border: 8px solid #333; overflow: hidden; }
+        #gameCanvas { position: absolute; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
+        #ui-layer { position: absolute; inset: 0; z-index: 10; pointer-events: none; }
 
         #top-bar { 
             position: absolute; top: 0; left: 0; width: 100%; height: 135px; 
-            background: rgba(255,255,255,0.85); border-bottom: 3px solid #333; padding: 10px;
+            background: rgba(255,255,255,0.9); border-bottom: 3px solid #333; padding: 10px;
         }
         
         #bottom-bar { 
@@ -36,7 +25,6 @@
             padding-bottom: env(safe-area-inset-bottom);
         }
 
-        /* Buttons RE-ENABLE pointer events so they still work */
         .btn { 
             pointer-events: auto; width: 52px; height: 52px; border-radius: 12px; 
             border: 3px solid #333; display: flex; align-items: center; justify-content: center; 
@@ -44,24 +32,22 @@
         }
         .btn:active { transform: translateY(2px); box-shadow: 0 2px 0 #bbb; }
 
-        #start-overlay { 
-            position: fixed; inset: 0; background: rgba(0,0,0,0.9); 
-            z-index: 1000; display: flex; flex-direction: column; 
-            align-items: center; justify-content: center; color: white; cursor: pointer;
-        }
+        #side-btns { position: absolute; top: 145px; right: 10px; display: flex; flex-direction: column; gap: 10px; pointer-events: none; }
+        .mini-btn { pointer-events: auto; width: 40px; height: 40px; border-radius: 50%; background: #fff; border: 2px solid #333; display: flex; align-items: center; justify-content: center; font-weight: bold; cursor: pointer; }
 
-        .modal { 
-            display: none; position: fixed; inset: 5%; background: white; 
-            z-index: 2000; border: 5px solid #333; border-radius: 20px; padding: 20px; 
-            overflow-y: auto; pointer-events: auto;
-        }
+        #start-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 1000; display: flex; flex-direction: column; align-items: center; justify-content: center; color: white; cursor: pointer; }
+        .modal { display: none; position: fixed; inset: 5%; background: white; z-index: 2000; border: 5px solid #333; border-radius: 20px; padding: 20px; overflow-y: auto; pointer-events: auto; }
+        .grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; margin-top: 10px; }
+        .item-card { border: 2px solid #eee; padding: 8px; border-radius: 10px; text-align: center; cursor: pointer; position: relative; }
+        .item-card.active { border-color: #2ecc71; background: #f0fff4; }
+        .price { font-size: 10px; font-weight: bold; background: #f1c40f; padding: 2px 5px; border-radius: 5px; }
     </style>
 </head>
 <body>
 
 <div id="start-overlay" onclick="startAudio()">
     <h1>Fruit Merge</h1>
-    <p>TAP SCREEN TO START</p>
+    <p>TAP TO START</p>
 </div>
 
 <div id="game-container">
@@ -69,42 +55,57 @@
 
     <div id="ui-layer">
         <div id="top-bar">
-            <div style="display:flex; justify-content:space-between; font-weight:bold; color: #333;">
+            <div style="display:flex; justify-content:space-between; font-weight:bold;">
                 <span>Score: <span id="s-val">0</span></span>
                 <span>Best: <span id="h-val">0</span></span>
             </div>
             <div id="next-disp" style="text-align:center; font-size:40px; margin: 5px;"></div>
-            <div style="width:100%; height:14px; background:#ddd; border:2px solid #333; border-radius:10px; overflow:hidden;">
+            <div style="width:100%; height:12px; background:#ddd; border:2px solid #333; border-radius:10px; overflow:hidden;">
                 <div id="p-bar" style="width:0%; height:100%; background:#2ecc71;"></div>
             </div>
-            <div style="display:flex; justify-content:space-between; margin-top:8px;">
+            <div style="display:flex; justify-content:space-between; margin-top:10px;">
                 <span style="font-weight:bold;">Wallet: $<span id="w-val">0</span></span>
-                <span class="btn" style="width:30px; height:30px; font-size:16px;" onclick="toggleMute()">🔊</span>
+                <span onclick="toggleMute()" style="cursor:pointer;">🔊</span>
             </div>
+        </div>
+
+        <div id="side-btns">
+            <div class="mini-btn" onclick="openHelp()" style="background:#f1c40f">?</div>
+            <div class="mini-btn" onclick="toggleFS()" style="background:#3498db">⛶</div>
         </div>
 
         <div id="bottom-bar">
             <div class="btn" style="background:#e67e22" onpointerdown="prepPwr('bomb', event)">💣</div>
             <div class="btn" style="background:#9b59b6" onpointerdown="prepPwr('wipe', event)">🧹</div>
             <div class="btn" style="background:#f1c40f" onpointerdown="prepPwr('evo', event)">✨</div>
-            <div class="btn" style="background:#3498db; width: 90px; color:white; font-size:16px; font-weight:bold;" onclick="openShop()">STORE</div>
+            <div class="btn" style="background:#3498db; width: 90px; color:white; font-size:14px; font-weight:bold;" onclick="openShop()">STORE</div>
         </div>
     </div>
 </div>
 
+<div id="helpModal" class="modal">
+    <h2>How to Play</h2>
+    <p><b>Merge:</b> Drop emojis. When two of the same kind touch, they evolve!</p>
+    <p><b>Death Line:</b> If any emoji stays above the red dashed line for 2 seconds, it's Game Over.</p>
+    <p><b>Power-ups:</b>
+        <br>💣 <b>Bomb:</b> Clears all emojis in a blast zone.
+        <br>🧹 <b>Broom:</b> Deletes all emojis of the same type as the one you hit.
+        <br>✨ <b>Wand:</b> Instantly evolves the target emoji type to the next level.
+    </p>
+    <button class="btn" onclick="closeModal()" style="width:100%; margin-top:10px;">Got it!</button>
+</div>
+
 <div id="shopModal" class="modal">
-    <h2>The Store</h2>
-    <p>Available Cash: $<span id="shop-wallet">0</span></p>
-    <hr>
-    <div id="shop-items"></div>
-    <button class="btn" onclick="closeModal()" style="width:100%; margin-top:20px; height: 40px; font-size: 16px;">Back to Game</button>
+    <h2>Store</h2>
+    <p>Wallet: $<span id="shop-wallet">0</span></p>
+    <div id="shop-content"></div>
+    <button class="btn" onclick="closeModal()" style="width:100%; margin-top:20px;">Close</button>
 </div>
 
 <script>
-const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🎃"] };
+const SKINS = { Fruit:["🍒","🍓","🍇","🍊","🍎","🍐","🍑","🍍","🍈","🍉","🥥","🎃"], Animals:["🐭","🐰","🦊","🐻","🐼","🦁","🐯","🐷","🐸","🐙","🐳","🦄"], Space:["☄️","🛰️","🪐","🌙","☀️","🔭","🚀","👽","🛸","🌌","🌠","👨‍🚀"] };
 const THEMES = { Lilac: "#E6E6FA", Sunset: "#ff7675", Forest: "#55efc4", Midnight: "#2d3436" };
-const SIZES = [22, 30, 38, 48, 60, 74, 88, 104, 122, 140, 160, 185];
-const COLORS = ["#ff7979", "#ffbe76", "#f6e58d", "#badc58", "#7ed6df", "#686de0", "#4834d4", "#f0932b", "#eb4d4b", "#6ab04c", "#130f40", "#222f3e"];
+const SIZES = [22, 30, 38, 48, 60, 74, 88, 104, 122, 140, 160, 185], COLORS = ["#ff7979", "#ffbe76", "#f6e58d", "#badc58", "#7ed6df", "#686de0", "#4834d4", "#f0932b", "#eb4d4b", "#6ab04c", "#130f40", "#222f3e"];
 
 let state = { score:0, best:0, pts:0, skin:'Fruit', theme:'Lilac', owned:['Fruit', 'Lilac'], muted:false, maxT:0 };
 let engine, aCtx, currentIdx=0, nextIdx=1, isDragging=false, activePwr=null, touchX=0, touchY=0, canDrop=true;
@@ -113,12 +114,11 @@ const canvas = document.getElementById('gameCanvas'), ctx = canvas.getContext('2
 function startAudio() {
     aCtx = new (window.AudioContext || window.webkitAudioContext)();
     document.getElementById('start-overlay').style.display = 'none';
-    if(aCtx.state === 'suspended') aCtx.resume();
     init();
 }
 
 function init() {
-    const s = localStorage.getItem('fm_v83');
+    const s = localStorage.getItem('fm_v84');
     if(s) Object.assign(state, JSON.parse(s));
     engine = Matter.Engine.create();
     updateCanvasSize();
@@ -143,12 +143,11 @@ function init() {
 }
 
 function updateCanvasSize() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth; canvas.height = window.innerHeight;
     const floorY = canvas.height - 95;
     Matter.Composite.clear(engine.world);
     Matter.Composite.add(engine.world, [
-        Matter.Bodies.rectangle(canvas.width/2, floorY + 50, canvas.width, 100, {isStatic:true}),
+        Matter.Bodies.rectangle(canvas.width/2, floorY+50, canvas.width, 100, {isStatic:true}),
         Matter.Bodies.rectangle(-5, canvas.height/2, 10, canvas.height, {isStatic:true}),
         Matter.Bodies.rectangle(canvas.width+5, canvas.height/2, 10, canvas.height, {isStatic:true})
     ]);
@@ -157,86 +156,60 @@ function updateCanvasSize() {
 function render() {
     ctx.fillStyle = THEMES[state.theme];
     ctx.fillRect(0,0,canvas.width,canvas.height);
-
-    // Death Line
-    ctx.strokeStyle = "rgba(255,0,0,0.5)"; ctx.setLineDash([5,5]); ctx.lineWidth = 2;
+    ctx.strokeStyle = "rgba(255,0,0,0.4)"; ctx.setLineDash([5,5]);
     ctx.beginPath(); ctx.moveTo(0,185); ctx.lineTo(canvas.width,185); ctx.stroke(); ctx.setLineDash([]);
 
     if(isDragging && !activePwr) {
-        ctx.font = "42px Arial"; ctx.textAlign = "center";
+        ctx.font = "40px Arial"; ctx.textAlign = "center";
         ctx.fillText(SKINS[state.skin][currentIdx], touchX, 170);
     }
-
     if(activePwr) {
-        ctx.strokeStyle = "#00ffff"; ctx.lineWidth = 4;
+        ctx.strokeStyle = "cyan"; ctx.lineWidth = 4;
         ctx.beginPath(); ctx.arc(touchX, touchY, 45, 0, Math.PI*2); ctx.stroke();
     }
 
     Matter.Composite.allBodies(engine.world).forEach(b => {
         if(b.plugin?.t === undefined) return;
-        ctx.save();
-        ctx.translate(b.position.x, b.position.y);
-        ctx.rotate(b.angle);
-        ctx.fillStyle = COLORS[b.plugin.t];
-        ctx.beginPath(); ctx.arc(0, 0, b.circleRadius, 0, Math.PI*2); ctx.fill();
+        ctx.save(); ctx.translate(b.position.x, b.position.y); ctx.rotate(b.angle);
+        ctx.fillStyle = COLORS[b.plugin.t]; ctx.beginPath(); ctx.arc(0, 0, b.circleRadius, 0, Math.PI*2); ctx.fill();
         ctx.font = (b.circleRadius*1.2) + "px Arial"; ctx.textAlign = "center"; ctx.textBaseline = "middle";
-        ctx.fillStyle = "white";
-        ctx.fillText(SKINS[state.skin][b.plugin.t], 0, 0);
-        ctx.restore();
+        ctx.fillStyle = "white"; ctx.fillText(SKINS[state.skin][b.plugin.t], 0, 0); ctx.restore();
 
         if(b.position.y < 185 && !isDragging) {
             if(!b.t0) b.t0 = Date.now();
-            if(Date.now() - b.t0 > 1800) { alert("Game Over!"); location.reload(); }
+            if(Date.now() - b.t0 > 2000) { alert("Game Over!"); location.reload(); }
         } else { b.t0 = null; }
     });
     requestAnimationFrame(render);
 }
 
-// THE GLOBAL INPUT FIX
-function getTouchPos(e) {
-    const t = e.touches ? e.touches[0] : e;
-    return { x: t.clientX, y: t.clientY };
-}
-
+// Fixed Input
 window.addEventListener('touchstart', (e) => {
-    if(e.target.closest('.btn') || e.target.closest('.modal')) return;
-    isDragging = true;
-    const p = getTouchPos(e);
-    touchX = p.x; touchY = p.y;
+    if(e.target.closest('.btn') || e.target.closest('.modal') || e.target.closest('.mini-btn')) return;
+    isDragging = true; touchX = e.touches[0].clientX; touchY = e.touches[0].clientY;
 }, {passive: false});
 
 window.addEventListener('touchmove', (e) => {
     if(!isDragging) return;
-    const p = getTouchPos(e);
-    touchX = p.x; touchY = p.y;
+    touchX = e.touches[0].clientX; touchY = e.touches[0].clientY;
 }, {passive: false});
 
 window.addEventListener('touchend', (e) => {
-    if(!isDragging) return;
-    if(activePwr) {
-        runPwr(touchX, touchY);
-        activePwr = null;
-    } else if(canDrop && touchY > 135 && touchY < canvas.height - 95) {
+    if(!isDragging || !canDrop) return;
+    if(activePwr) { runPwr(touchX, touchY); activePwr = null; }
+    else if(touchY > 135 && touchY < canvas.height - 95) {
         Matter.Composite.add(engine.world, Matter.Bodies.circle(touchX, 150, SIZES[currentIdx], { restitution:0.5, plugin:{t:currentIdx} }));
         currentIdx = nextIdx; nextIdx = Math.floor(Math.random()*4);
-        canDrop = false; setTimeout(() => canDrop = true, 400);
+        canDrop = false; setTimeout(() => canDrop = true, 400); // Prevents double drops
     }
-    isDragging = false;
-    updateUI();
+    isDragging = false; updateUI();
 }, {passive: false});
 
-// Mouse Support
-window.addEventListener('mousedown', (e) => {
-    if(e.target.closest('.btn') || e.target.closest('.modal')) return;
-    isDragging = true; touchX = e.clientX; touchY = e.clientY;
-});
-window.addEventListener('mousemove', (e) => { if(isDragging) { touchX = e.clientX; touchY = e.clientY; }});
-window.addEventListener('mouseup', () => { if(isDragging) window.dispatchEvent(new Event('touchend')); });
-
+// Powerup Logic
 function prepPwr(p, e) {
     const costs = {bomb:500, wipe:1000, evo:1500};
     if(state.pts >= costs[p]) { activePwr = p; isDragging = true; }
-    else { alert("Need more coins!"); }
+    else { alert("Not enough cash!"); }
 }
 
 function runPwr(x, y) {
@@ -250,33 +223,49 @@ function runPwr(x, y) {
         state.pts -= 1000;
     } else if(activePwr === 'evo' && target && target.plugin.t < 11) {
         const type = target.plugin.t;
-        bodies.forEach(b => { 
-            if(b.plugin.t === type) {
-                const nt = type + 1;
-                Matter.Composite.add(engine.world, Matter.Bodies.circle(b.position.x, b.position.y, SIZES[nt], {plugin:{t:nt}}));
-                Matter.Composite.remove(engine.world, b);
-            }
-        });
+        bodies.forEach(b => { if(b.plugin.t === type) { 
+            const nt = type + 1; Matter.Composite.add(engine.world, Matter.Bodies.circle(b.position.x, b.position.y, SIZES[nt], {plugin:{t:nt}}));
+            Matter.Composite.remove(engine.world, b);
+        }});
         state.pts -= 1500;
     }
 }
 
+// UI & Store
 function updateUI() {
     document.getElementById('s-val').innerText = state.score;
     document.getElementById('h-val').innerText = state.best = Math.max(state.best, state.score);
     document.getElementById('w-val').innerText = state.pts;
     document.getElementById('next-disp').innerText = "Next: " + SKINS[state.skin][nextIdx];
     document.getElementById('p-bar').style.width = (state.maxT/11*100) + "%";
-    localStorage.setItem('fm_v83', JSON.stringify(state));
+    localStorage.setItem('fm_v84', JSON.stringify(state));
 }
 
-function openShop() { 
-    if(aCtx) aCtx.resume();
-    document.getElementById('shopModal').style.display='block'; 
+function openShop() {
+    document.getElementById('shopModal').style.display='block';
     document.getElementById('shop-wallet').innerText = state.pts;
+    let html = '<h3>Skins</h3><div class="grid">';
+    Object.keys(SKINS).forEach(s => {
+        html += `<div class="item-card ${state.skin===s?'active':''}" onclick="buy('${s}','skin',500)">${SKINS[s][0]} ${s} <br> <span class="price">${state.owned.includes(s)?'Owned':'$500'}</span></div>`;
+    });
+    html += '</div><h3>Themes</h3><div class="grid">';
+    Object.keys(THEMES).forEach(t => {
+        html += `<div class="item-card ${state.theme===t?'active':''}" onclick="buy('${t}','theme',300)"><div style="background:${THEMES[t]};height:10px"></div>${t} <br> <span class="price">${state.owned.includes(t)?'Owned':'$300'}</span></div>`;
+    });
+    document.getElementById('shop-content').innerHTML = html + '</div>';
 }
-function closeModal() { document.getElementById('shopModal').style.display='none'; }
+
+function buy(id, type, cost) {
+    if(!state.owned.includes(id)) {
+        if(state.pts >= cost) { state.pts -= cost; state.owned.push(id); } else return;
+    }
+    state[type] = id; updateUI(); openShop();
+}
+
+function openHelp() { document.getElementById('helpModal').style.display='block'; }
+function closeModal() { document.querySelectorAll('.modal').forEach(m => m.style.display='none'); }
 function toggleMute() { state.muted = !state.muted; }
+function toggleFS() { if(!document.fullscreenElement) document.documentElement.requestFullscreen(); else document.exitFullscreen(); }
 window.addEventListener('resize', updateCanvasSize);
 </script>
 </body>
