--- a/index.html
+++ b/index.html
@@ -2,30 +2,32 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Fruit Merge v1.05</title>
+<title>Fruit Merge v1.06</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 <style>
 :root{--bg:#FDF6E3;--bd:#657B83;--txt:#586E75;--acc:#2AA198;--font:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif}
 *{box-sizing:border-box;touch-action:none;-webkit-tap-highlight-color:transparent;user-select:none}
 body{margin:0;overflow:hidden;background:var(--bg);font-family:var(--font);color:var(--txt)}
 #ui{position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:10;display:flex;flex-direction:column;justify-content:space-between}
-.top{height:175px;padding:15px;background:linear-gradient(to bottom,rgba(255,255,255,.9),transparent);pointer-events:auto;text-align:center}
-.row{display:flex;justify-content:space-between;align-items:center;margin-bottom:5px}
-.score{font-size:20px;font-weight:800} .lbl{font-size:9px;opacity:.7;text-transform:uppercase}
-#next-box{width:50px;height:50px;border:2px dashed var(--bd);border-radius:50%;margin:0 auto;display:grid;place-items:center;font-size:24px;background:#fff}
-.bar{display:flex;justify-content:space-between;background:rgba(0,0,0,.08);padding:6px;border-radius:15px;margin:8px 0}
-.dot{width:15px;height:15px;border-radius:50%;background:rgba(0,0,0,0.1);display:grid;place-items:center;font-size:8px}
-.dot.on{transform:scale(1.2);box-shadow:0 0 5px currentColor;background:#fff}
-.wallet-row{font-weight:800;font-size:14px;color:var(--acc)}
-.bot{height:100px;background:rgba(255,255,255,0.95);border-top:1px solid #0001;display:flex;justify-content:space-around;align-items:center;pointer-events:auto;padding-bottom:env(safe-area-inset-bottom)}
-.btn{background:0;border:0;font-size:24px;display:flex;flex-direction:column;align-items:center;opacity:.6;cursor:pointer}
-.btn.act{opacity:1;color:var(--acc)} .btn span{font-size:9px;font-weight:700}
+.top{height:160px;padding:15px;background:rgba(255,255,255,0.9);backdrop-filter:blur(5px);pointer-events:auto;border-bottom:2px solid var(--bd)}
+.row{display:flex;justify-content:space-between;align-items:center}
+.score{font-size:22px;font-weight:800} .lbl{font-size:10px;opacity:.7;text-transform:uppercase}
+#next-box{width:45px;height:45px;border:2px dashed var(--bd);border-radius:50%;display:grid;place-items:center;font-size:24px;background:#fff}
+.bar{display:flex;justify-content:space-between;background:rgba(0,0,0,.08);padding:6px;border-radius:15px;margin-top:10px}
+.dot{width:16px;height:16px;border-radius:50%;background:rgba(0,0,0,0.1);display:grid;place-items:center;font-size:9px}
+.dot.on{transform:scale(1.1);background:#fff;box-shadow:0 0 5px rgba(0,0,0,0.1)}
+.bot{height:90px;background:rgba(255,255,255,0.95);border-top:2px solid var(--bd);display:flex;align-items:center;padding:0 15px;pointer-events:auto;justify-content:space-between}
+.btn-grp{display:flex;gap:15px;align-items:center}
+.btn{background:0;border:0;font-size:22px;display:flex;flex-direction:column;align-items:center;opacity:.6;cursor:pointer;transition:0.2s}
+.btn.act{opacity:1;color:var(--acc);transform:scale(1.1)} .btn span{font-size:9px;font-weight:700}
+.divider{width:2px;height:40px;background:var(--bd);opacity:0.3}
 .modal{position:absolute;top:0;left:0;width:100%;height:100%;background:#0008;z-index:99;display:none;align-items:center;justify-content:center;pointer-events:auto}
 .modal.open{display:flex}
-.card{background:#fff;width:90%;max-width:400px;height:80%;border-radius:20px;display:flex;flex-direction:column;overflow:hidden}
-.shop-body{flex:1;overflow-y:auto;padding:15px;background:#f9f9f9}
-.grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-.item{border:1px solid #eee;border-radius:12px;padding:12px;text-align:center;background:#fff}
+.card{background:#fff;width:90%;max-width:400px;height:70%;border-radius:20px;display:flex;flex-direction:column;overflow:hidden}
+.shop-body{flex:1;overflow-y:scroll;padding:15px;background:#fdfdfd;touch-action:pan-y}
+.shop-body::-webkit-scrollbar{width:8px;display:block} .shop-body::-webkit-scrollbar-thumb{background:var(--bd);border-radius:4px}
+.grid{display:grid;grid-template-columns:1fr 1fr;gap:10px}
+.item{border:1px solid #eee;border-radius:12px;padding:10px;text-align:center;background:#fff}
 .item.eq{border:2px solid var(--acc);background:#f0fdf4}
 .cat-title{font-size:11px;font-weight:800;padding:10px 0;text-transform:uppercase;color:var(--acc);border-bottom:1px solid #eee;grid-column:span 2}
 </style>
@@ -35,25 +37,30 @@ body{margin:0;overflow:hidden;background:var(--bg);font-family:var(--font);color
 <div id="ui">
     <div class="top">
         <div class="row">
-            <div style="text-align:left"><div class="lbl">Score</div><div class="score" id="sCurrent">0</div></div>
+            <div><div class="lbl">Score</div><div class="score" id="sCurrent">0</div></div>
             <div id="next-box"></div>
-            <div style="text-align:right"><div class="lbl">Best</div><div class="score" id="sBest">0</div></div>
+            <div style="text-align:right"><div class="lbl">Wallet</div><div class="score" style="color:var(--acc)">💰<span id="val-wallet">0</span></div></div>
         </div>
         <div class="bar" id="prog"></div>
-        <div class="wallet-row">💰 <span id="val-wallet">0</span></div>
+        <div style="text-align:center;font-size:10px;margin-top:5px">BEST: <span id="sBest">0</span></div>
     </div>
     <div class="bot">
-        <button class="btn" onclick="toggleModal('m-info')">❓<span>Info</span></button>
-        <button class="btn" onclick="toggleStore()">🛒<span>Store</span></button>
-        <button class="btn pwr" id="b-bomb" onclick="setTool('bomb')">💣<span>Bomb</span></button>
-        <button class="btn pwr" id="b-broom" onclick="setTool('broom')">🧹<span>Broom</span></button>
-        <button class="btn pwr" id="b-wand" onclick="setTool('wand')">🪄<span>Wand</span></button>
-        <button class="btn" onclick="toggleFull()">⛶<span>Full</span></button>
+        <div class="btn-grp">
+            <button class="btn pwr" id="b-bomb" onclick="setTool('bomb')">💣<span>Bomb</span></button>
+            <button class="btn pwr" id="b-broom" onclick="setTool('broom')">🧹<span>Broom</span></button>
+            <button class="btn pwr" id="b-wand" onclick="setTool('wand')">🪄<span>Wand</span></button>
+        </div>
+        <div class="divider"></div>
+        <div class="btn-grp">
+            <button class="btn" onclick="toggleModal('m-info')">❓<span>Info</span></button>
+            <button class="btn" onclick="toggleFull()">⛶<span>Full</span></button>
+            <button class="btn" onclick="toggleStore()">🛒<span>Store</span></button>
+        </div>
     </div>
 </div>
 
 <div class="modal" id="m-store"><div class="card"><div style="padding:15px;display:flex;justify-content:space-between;border-bottom:1px solid #eee"><b>Market</b><span onclick="toggleStore()" style="cursor:pointer">✕</span></div><div class="shop-body" id="shop-container"></div></div></div>
-<div class="modal" id="m-info"><div class="card" style="height:auto;padding:20px"><h3>How to Play</h3><p>• Drop items to merge identical tiers.<br>• Reach Tier 12 to win!<br>• Don't stay above the red line for 2 seconds.<br>• 💣 <b>Bomb:</b> Clears area.<br>• 🧹 <b>Broom:</b> Clears all of 1 type.<br>• 🪄 <b>Wand:</b> Level up 1 item.</p><button class="btn" style="background:var(--acc);color:#fff;padding:10px;border-radius:10px;opacity:1" onclick="toggleModal('m-info')">Got it!</button></div></div>
+<div class="modal" id="m-info"><div class="card" style="height:auto;padding:25px"><h3>How to Play</h3><p>• Drag to aim, release to drop.<br>• Identical items merge into the next tier.<br>• <b>Death Line:</b> Don't let items sit above the red line for 2s!<br><br><b>Power-Ups:</b><br>• 💣 <b>Bomb:</b> Tap a power then tap the board to clear an area.<br>• 🧹 <b>Broom:</b> Tap a fruit to delete all of its kind.<br>• 🪄 <b>Wand:</b> Tap a fruit to evolve it instantly.</p><button class="btn" style="background:var(--acc);color:#fff;padding:10px;border-radius:10px;opacity:1;width:100%" onclick="toggleModal('m-info')">Got it!</button></div></div>
 <div class="modal" id="m-over"><div style="text-align:center;color:#fff"><h1>GAME OVER</h1><button class="btn" style="background:#fff;color:#000;padding:10px 30px;border-radius:20px;opacity:1" onclick="reset()">Retry</button></div></div>
 
 <script>
@@ -63,19 +70,19 @@ const THEMES={'Mellow':'#FDF6E3','Matcha':'#E8F5E9','Midnight':'#1a1b26','Lavend
 const BORDERS={'Slate':'#657B83','Gold':'#DAA520','Red':'#DC143C','Neon':'#B026FF','Black':'#000000','White':'#FFFFFF'};
 const COLORS=['#F00','#F70','#FF0','#0F0','#00F','#4B0','#940','#F14','#0CE','#FD7','#F45','#32C'];
 
-let st={s:0, w:parseInt(localStorage.getItem('f5_w')||0), h:parseInt(localStorage.getItem('f5_h')||0), inv:JSON.parse(localStorage.getItem('f5_i')||'["sk_Fruit","ot_def","th_Mellow","bd_Slate"]'), 
-    eq:JSON.parse(localStorage.getItem('f5_e')||'{"sk":"Fruit","ot":"def","th":"Mellow","bd":"Slate"}'), next:0, drag:0, x:0, y:0, drop:1, over:0, tool:null, max:-1, audInit:0};
+let st={s:0, w:parseInt(localStorage.getItem('f6_w')||0), h:parseInt(localStorage.getItem('f6_h')||0), inv:JSON.parse(localStorage.getItem('f6_i')||'["sk_Fruit","ot_def","th_Mellow","bd_Slate"]'), 
+    eq:JSON.parse(localStorage.getItem('f6_e')||'{"sk":"Fruit","ot":"def","th":"Mellow","bd":"Slate"}'), next:0, drag:0, x:0, y:0, drop:1, over:0, tool:null, max:-1};
 
 const cv=document.getElementById('c'), cx=cv.getContext('2d'), eng=E.create();
-let W, H, aud;
+let W, H;
 
 function rsz(){
     W=window.innerWidth; H=window.innerHeight;
     cv.width=W*devicePixelRatio; cv.height=H*devicePixelRatio;
     cx.scale(devicePixelRatio,devicePixelRatio);
     C.clear(eng.world,0,1);
-    const t=150; // Extra thick floor
-    const floor=B.rectangle(W/2,H-100+t/2,W,t,{isStatic:1,friction:0.5,label:'floor'});
+    const t=200; // Super deep floor
+    const floor=B.rectangle(W/2,H-90+t/2,W,t,{isStatic:1,friction:0.5,label:'floor'});
     const lw=B.rectangle(0,H/2,30,H*2,{isStatic:1});
     const rw=B.rectangle(W,H/2,30,H*2,{isStatic:1});
     C.add(eng.world,[floor,lw,rw]);
@@ -97,7 +104,7 @@ Ev.on(eng,'collisionStart',e=>{
 function loop(){
     E.update(eng,16); cx.clearRect(0,0,W,H);
     document.body.style.background=THEMES[st.eq.th];
-    const dl=195;
+    const dl=195; // Death line fixed relative to top
     cx.beginPath(); cx.moveTo(15,dl); cx.lineTo(W-15,dl); cx.strokeStyle='#F44'; cx.setLineDash([5,5]); cx.stroke(); cx.setLineDash([]);
     cx.fillStyle=BORDERS[st.eq.bd]; cx.globalAlpha=0.5; cx.fillRect(0,0,15,H); cx.fillRect(W-15,0,15,H); cx.globalAlpha=1;
 
@@ -106,15 +113,15 @@ function loop(){
         if(b.position.y-b.circleRadius < dl && b.speed<0.5){ if(!b.tm) b.tm=Date.now(); if(Date.now()-b.tm>2000) over(); } else b.tm=null;
         const r=b.circleRadius; cx.translate(b.position.x,b.position.y); cx.rotate(b.angle);
         cx.shadowColor=COLORS[b.tier]; cx.shadowBlur=10; cx.fillStyle='#fff'; cx.beginPath(); cx.arc(0,0,r,0,6.28); cx.fill();
-        cx.shadowBlur=0; cx.strokeStyle=st.eq.ot==='def'?'#0002':(st.eq.ot==='white'?'#fff':'#000'); cx.stroke();
+        cx.shadowBlur=0; cx.strokeStyle=st.eq.ot==='white'?'#fff':(st.eq.ot==='black'?'#000':'#0002'); cx.stroke();
         cx.font=`${r*1.4}px serif`; cx.textAlign='center'; cx.textBaseline='middle'; cx.fillStyle='#000'; cx.fillText(SKINS[st.eq.sk][b.tier],0,0);
         cx.rotate(-b.angle); cx.translate(-b.position.x,-b.position.y);
     });
 
     if(st.drag && st.drop && !st.tool){
         let gx=Math.max(35,Math.min(W-35,st.x));
-        cx.beginPath(); cx.moveTo(gx,dl); cx.lineTo(gx,H-100); cx.strokeStyle='#aaa'; cx.setLineDash([5,5]); cx.stroke();
-        cx.font="30px serif"; cx.globalAlpha=0.4; cx.fillText(SKINS[st.eq.sk][st.next],gx,dl-20); cx.globalAlpha=1;
+        cx.beginPath(); cx.moveTo(gx,dl+20); cx.lineTo(gx,H-90); cx.strokeStyle='#aaa'; cx.setLineDash([5,5]); cx.stroke();
+        cx.font="30px serif"; cx.globalAlpha=0.4; cx.fillText(SKINS[st.eq.sk][st.next],gx,dl+10); cx.globalAlpha=1;
     }
     if(!st.over) requestAnimationFrame(loop);
 }
@@ -125,23 +132,25 @@ function ptr(e,t){
     if(t==='d' && !e.target.closest('button,.modal')) st.drag=1;
     if(t==='u' && st.drag){ st.drag=0; act(); }
 };
+
 function act(){
     let bs=C.allBodies(eng.world);
     if(st.tool){
-        if(st.tool==='bomb'){ C.remove(eng.world, bs.filter(b=>!b.isStatic && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y}))<90)); }
-        else {
-            let target=Q.point(bs,{x:st.x,y:st.y})[0];
-            if(target && target.tier!==undefined){
+        if(st.tool==='bomb'){ 
+            C.remove(eng.world, bs.filter(b=>!b.isStatic && b.tier!==undefined && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y}))<90)); 
+        } else {
+            let target=Q.point(bs,{x:st.x,y:st.y}).find(b=>b.tier!==undefined);
+            if(target){
                 if(st.tool==='broom') C.remove(eng.world, bs.filter(b=>b.tier===target.tier));
                 if(st.tool==='wand' && target.tier<11){
                     let t=target.tier, p=target.position; C.remove(eng.world, target);
-                    let nb=B.circle(p.x,p.y,10+(t+1)*6,{restitution:0.3}); nb.tier=t+1; C.add(eng.world,nb);
+                    let nb=B.circle(p.x,p.y,10+((t+1)*6),{restitution:0.3}); nb.tier=t+1; C.add(eng.world,nb);
                 }
             }
         }
         st.tool=null; document.querySelectorAll('.pwr').forEach(b=>b.classList.remove('act'));
-    } else if(st.drop){
-        const b=B.circle(Math.max(35,Math.min(W-35,st.x)),100,10+(st.next*6),{restitution:0.3});
+    } else if(st.drop && st.y > 160){
+        const b=B.circle(Math.max(35,Math.min(W-35,st.x)),180,10+(st.next*6),{restitution:0.3});
         b.tier=st.next; C.add(eng.world,b);
         st.next=Math.floor(Math.random()*5); updPre(); st.drop=0; setTimeout(()=>st.drop=1,500);
     }
@@ -152,8 +161,8 @@ function updSc(n){ st.s+=n; st.w+=Math.floor(n/10); document.getElementById('sCu
 function updPrg(t){ if(t>st.max){st.max=t; renderPrg();} }
 function updPre(){ document.getElementById('next-box').innerText=SKINS[st.eq.sk][st.next]; }
 function renderPrg(){ const d=document.getElementById('prog'); d.innerHTML=''; for(let i=0;i<12;i++) d.innerHTML+=`<div class="dot ${i<=st.max?'on':''}" style="color:${COLORS[i]}">${i<=st.max?SKINS[st.eq.sk][i]:''}</div>`; }
-function save(){ localStorage.setItem('f5_i',JSON.stringify(st.inv)); localStorage.setItem('f5_e',JSON.stringify(st.eq)); localStorage.setItem('f5_h',st.h); localStorage.setItem('f5_w',st.w); }
-function toggleModal(id){ const m=document.getElementById(id); m.classList.toggle('open'); }
+function save(){ localStorage.setItem('f6_i',JSON.stringify(st.inv)); localStorage.setItem('f6_e',JSON.stringify(st.eq)); localStorage.setItem('f6_h',st.h); localStorage.setItem('f6_w',st.w); }
+function toggleModal(id){ document.getElementById(id).classList.toggle('open'); }
 function reset(){ location.reload(); }
 function toggleFull(){ if(!document.fullscreenElement) document.documentElement.requestFullscreen(); else document.exitFullscreen(); }
 
@@ -173,10 +182,10 @@ function toggleStore(){
                 const own=st.inv.includes(i.id), eq=(st.eq.sk==i.v||st.eq.ot==i.v||st.eq.th==i.v||st.eq.bd==i.v);
                 let prv = i.n;
                 if(cat==='Skins') prv=SKINS[i.v][0];
-                if(cat==='Themes') prv=`<div style="width:20px;height:20px;background:${THEMES[i.v]};border-radius:50%;margin:0 auto"></div>`;
-                if(cat==='Borders') prv=`<div style="width:20px;height:20px;background:${BORDERS[i.v]};border-radius:50%;margin:0 auto"></div>`;
+                if(cat==='Themes') prv=`<div style="width:20px;height:20px;background:${THEMES[i.v]};border-radius:50%;margin:0 auto;border:1px solid #ccc"></div>`;
+                if(cat==='Borders') prv=`<div style="width:20px;height:20px;background:${BORDERS[i.v]};border-radius:50%;margin:0 auto;border:1px solid #ccc"></div>`;
                 const el=document.createElement('div'); el.className=`item ${eq?'eq':''}`;
-                el.innerHTML=`${prv}<br><b>${i.n}</b><br><small>${own?(eq?'EQ':'✓'):'$'+i.p}</small>`;
+                el.innerHTML=`${prv}<br><b>${i.n}</b><br><small>${eq?'Equipped':(own?'Owned':'$'+i.p)}</small>`;
                 el.onclick=()=>{
                     if(own){ if(cat==='Skins')st.eq.sk=i.v; if(cat==='Outlines')st.eq.ot=i.v; if(cat==='Themes')st.eq.th=i.v; if(cat==='Borders')st.eq.bd=i.v; }
                     else if(st.w>=i.p){ st.w-=i.p; st.inv.push(i.id); }
